--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -28,7 +28,7 @@
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="{{ asset('build/images/hero-call-logo.png') }}" />
+          <img class="w-full md:w-4/5 z-50" src="https://tailus.io/sources/blocks/tech-startup/preview/images/globalization-cuate.svg" />
         </div>
       </div>
     </div>
