--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -1,9 +1,9 @@
-<h1>Hi! Please confirm your email!</h1>
+<h1>Bonjour, confimer votre mail s'il vous plaît !</h1>
 
 <p>
-    Please confirm your email address by clicking the following link: <br><br>
+   Veuillez confirmer votre mail en cliquant sur le lien suivant : <br><br>
     <a href="{{ signedUrl|raw }}">Confirm my Email</a>.
-    This link will expire in {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
+    Ce lien expirera dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
 <p>
