--- a/templates/back/assign_mission/assign.html.twig
+++ b/templates/back/assign_mission/assign.html.twig
@@ -3,9 +3,14 @@
 {% block title %}Assigner une mission{% endblock %}
 
 {% block body %}
-    <h1>Assigner Mission</h1>
+    <h1 class="text-3xl text-black pb-6">Assigner Mission</h1>
 
     {{ include('back/assign_mission/_form.html.twig', {'button_label': 'Assigner'}) }}
 
-    <a href="{{ path('back_assign_mission_index') }}">Retour</a>
+    <br>
+    <div class="max-w-sm w-24 bg-white shadow sm:rounded-md overflow-hidden">
+        <div class="px-6 py-4">
+            <a href="{{ path('back_assign_mission_index') }}" class="no-underline hover:underline ...">Retour</a>
+        </div>
+    </div>
 {% endblock %}
