--- a/templates/back/event/show.html.twig
+++ b/templates/back/event/show.html.twig
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <th>Filename</th>
-                <td><img src="{{ asset('uploads/' ~ event.filename) }}"></td>
+                <td><img src="{{ asset('uploads/events/' ~ event.filename) }}"></td>
             </tr>
         </tbody>
     </table>
