--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -2,7 +2,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tailwind Admin Template</title>
+	<title>Administration</title>
+	<link rel="icon" href="{{ asset('build/images/hero-call-logo.png') }}">
 	<meta name="author" content="David Grzyb">
 	<meta
 	name="description" content="">
@@ -42,7 +43,7 @@
 
 	<aside class="relative bg-sidebar h-screen w-64 hidden sm:block shadow-xl">
 		<div class="p-6">
-			<a href="index.html" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Admin</a>
+			<a href="index.html" class="text-white text-3xl font-semibold uppercase hover:text-gray-300"><img src="{{ asset('build/images/hero-call-logo.png') }}" class="h-8 mr-3" alt="Hero Call Logo" /></a>
 		</div>
 		<nav class="text-white text-base font-semibold pt-3">
 			<a href="/admin" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
@@ -50,11 +51,11 @@
 				Dashboard
 			</a>
 			<a href="{{ path('back_user_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-				<i class="fas fa-sticky-note mr-3"></i>
+				<i class="fas fa-users mr-3"></i>
 				Les utilisateurs
 			</a>
 			<a href="{{ path('back_ability_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-				<i class="fas fa-table mr-3"></i>
+				<i class="fas fa-bolt mr-3"></i>
 				Les abilités
 			</a>
 			<a href="{{ path('back_mission_history_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
@@ -62,7 +63,7 @@
 				L'historique des missions
 			</a>
 			<a href="{{ path('back_event_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-				<i class="fas fa-sticky-note mr-3"></i>
+				<i class="fas fa-calendar mr-3"></i>
 				Les évènements
 			</a>
 			<a href="{{ path('back_mission_type_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
@@ -70,15 +71,15 @@
 				Les types de mission
 			</a>
 			<a href="{{ path('back_assign_mission_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-				<i class="fas fa-sticky-note mr-3"></i>
+				<i class="fas fa-arrow-right mr-3"></i>
 				Assigner une mission
 			</a>
 			<a href="{{ path('back_mission_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-				<i class="fas fa-table mr-3"></i>
+				<i class="fas fa-list mr-3"></i>
 				Les missions
 			</a>
 			<a href="{{ path('front_default_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
-				<i class="fas fa-sticky-note mr-3"></i>
+				<i class="fas fa-home mr-3"></i>
 				Page accueil
 			</a>
 		</nav>
@@ -91,7 +92,7 @@
 			<div class="w-1/2"></div>
 			<div x-data="{ isOpen: false }" class="relative w-1/2 flex justify-end">
 				<button @click="isOpen = !isOpen" class="realtive z-10 w-12 h-12 rounded-full overflow-hidden border-4 border-gray-400 hover:border-gray-300 focus:border-gray-300 focus:outline-none">
-					<img src="{{ asset('uploads/user.png') }}">
+					<img src="{{ asset('uploads/default/user.png') }}">
 				</button>
 				<button x-show="isOpen" @click="isOpen = false" class="h-full w-full fixed inset-0 cursor-default"></button>
 				<div x-show="isOpen" class="absolute w-32 bg-white rounded-lg shadow-lg py-2 mt-16">
@@ -104,7 +105,7 @@
 		<!-- Mobile Header & Nav -->
 		<header x-data="{ isOpen: false }" class="w-full bg-sidebar py-5 px-6 sm:hidden">
 			<div class="flex items-center justify-between">
-				<a href="index.html" class="text-white text-3xl font-semibold uppercase hover:text-gray-300">Admin</a>
+				<a href="index.html" class="text-white text-3xl font-semibold uppercase hover:text-gray-300"><img src="{{ asset('build/images/hero-call-logo.png') }}" class="h-8 mr-3" alt="Hero Call Logo" /></a>
 				<button @click="isOpen = !isOpen" class="text-white text-3xl focus:outline-none">
 					<i x-show="!isOpen" class="fas fa-bars"></i>
 					<i x-show="isOpen" class="fas fa-times"></i>
@@ -118,11 +119,11 @@
                     Dashboard
                 </a>
                 <a href="{{ path('back_user_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-sticky-note mr-3"></i>
+                    <i class="fas fa-users mr-3"></i>
                     Les utilisateurs
                 </a>
                 <a href="{{ path('back_ability_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-table mr-3"></i>
+                    <i class="fas fa-bolt mr-3"></i>
                     Les abilités
                 </a>
                 <a href="{{ path('back_mission_history_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
@@ -130,24 +131,24 @@
                     L'historique des missions
                 </a>
                 <a href="{{ path('back_event_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-sticky-note mr-3"></i>
+                    <i class="fas fa-calendar mr-3"></i>
                     Les évènements
                 </a>
                 <a href="{{ path('back_mission_type_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-sticky-note mr-3"></i>
                     Les types de mission
                 </a>
-				<a href="{{ path('front_default_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-sticky-note mr-3"></i>
-                    Page accueil
-                </a>
                 <a href="{{ path('back_assign_mission_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-sticky-note mr-3"></i>
+                    <i class="fas fa-arrow-right mr-3"></i>
                     Assigner une mission
                 </a>
 				<a href="{{ path('back_mission_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
-                    <i class="fas fa-sticky-note mr-3"></i>
+                    <i class="fas fa-list mr-3"></i>
                     Les missions
+                </a>
+				<a href="{{ path('front_default_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+                    <i class="fas fa-home mr-3"></i>
+                    Page accueil
                 </a>
                 <a href="{{ path('back_edit', {'id': user_admin[0].id}) }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-user mr-3"></i>
