--- a/templates/back/mission/index.html.twig
+++ b/templates/back/mission/index.html.twig
@@ -60,7 +60,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="max-w-sm w-48 rounded overflow-hidden shadow-lg">
+                <div class="max-w-sm w-48 bg-white rounded-2xl overflow-hidden shadow-lg">
                     <div class="px-6 py-4">
                         <a href="{{ path('back_mission_new') }}" class="no-underline hover:underline ...">Créer une mission</a>
                     </div>
