--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -459,7 +459,7 @@
         {% for event in events %}
           <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
             <div class="mx-auto flex w-96 flex-col justify-center bg-white rounded-2xl shadow-xl shadow-slate-300/60">
-              <img class="object-cover h-48 w-96 rounded-t-2xl object-cover object-center" src="{{ asset('uploads/' ~ event.filename) }}" />
+              <img class="object-cover h-48 w-96 rounded-t-2xl object-cover object-center" src="{{ asset('uploads/events/' ~ event.filename) }}" />
               <div class="p-4">
                 <small class="text-blue-400 text-xs">évènement</small>
                 <h1 class="text-2xl text-gray-800 dark:text-gray-50 font-medium text-slate-600 pb-2">{{ event.name }}</h1>
@@ -476,7 +476,11 @@
                   <b>Date: </b> {{ event.date|date('d-m-Y H:i:s') }}
                 </p>
                 <div class="flex items-center flex-wrap ">
-                  <button class="bg-blue-600 from-orange-300 to-amber-400 hover:scale-105 drop-shadow-md shadow-cla-violate px-4 py-1 rounded-lg">Payer</button>
+                  {% if event.price > 0 %}
+                    <button class="bg-blue-600 from-orange-300 to-amber-400 hover:scale-105 drop-shadow-md shadow-cla-violate px-4 py-1 rounded-lg">Payer</button>
+                  {% else %}
+                    <button type="button" class="text-white bg-blue-300 from-orange-300 to-amber-400 drop-shadow-md shadow-cla-violate px-4 py-1 rounded-lg focus:outline-none" disabled>Gratuit</button>
+                  {% endif %}
                 </div>
               </div>
             </div>
@@ -487,7 +491,7 @@
             </h4>
         {% endfor %}
 
-        {% if events > 0 %}
+        {% if events|length > 3 %}
           <h4 class="w-full my-2 text-2xl font-bold leading-tight text-center text-gray-800">
             <a class="text-pink-500 underline" href="/events">Voir plus</a>
           </h4>
