--- a/templates/front/event/index.html.twig
+++ b/templates/front/event/index.html.twig
@@ -35,7 +35,7 @@
         {% for event in events %}
           <div class="w-full md:w-1/3 p-6 flex flex-col flex-grow flex-shrink">
             <div class="mx-auto flex w-96 flex-col justify-center bg-white rounded-2xl shadow-xl shadow-slate-300/60">
-              <img class="object-cover h-48 w-96 rounded-t-2xl object-cover object-center" src="{{ asset('uploads/' ~ event.filename) }}" />
+              <img class="object-cover h-48 w-96 rounded-t-2xl object-cover object-center" src="{{ asset('uploads/events/' ~ event.filename) }}" />
               <div class="p-4">
                 <small class="text-blue-400 text-xs">évènement</small>
                 <h1 class="text-2xl text-gray-800 dark:text-gray-50 font-medium text-slate-600 pb-2">{{ event.name }}</h1>
