--- a/templates/front/user/_form.html.twig
+++ b/templates/front/user/_form.html.twig
@@ -1,6 +1,4 @@
 {{ form_start(form) }}
-    <!-- component -->
-    <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
 
 
@@ -14,7 +12,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
+                <div class="flex-auto px-4 lg:px-10 py-10 pt-0 bg-gray-100">
                     <form name="update_user_profile" method="post">
                         <h6 class="text-blueGray-400 text-sm mt-3 mb-6 font-bold uppercase">
                         Mes informations personnelles
