--- a/templates/base_front.html.twig
+++ b/templates/base_front.html.twig
@@ -6,8 +6,7 @@
         <title>Administration</title>
         <link rel="icon" href="{{ asset('build/images/hero-call-logo.png') }}">
         <meta name="author" content="David Grzyb">
-        <meta
-        name="description" content="">
+        <meta name="description" content="">
 
         <!-- Tailwind -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
