--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -381,14 +381,14 @@
               </div>
               <div class="flex avatar justify-center my-2">
                 <div class="w-40 rounded-full ring ring-gradient ring-offset-base-100 ring-offset-2">
-                  <img src="{{ bestHeroes[0].avatar }}" />
+                  <img class="rounded-full" src="{{ bestHeroes[0].avatar }}" />
                 </div>
               </div>
             </div>
             <div class="flex-none mt-auto bg-white rounded-b rounded-t-none overflow-hidden shadow p-6">
               <div class="w-full pt-6 text-3xl text-gray-600 font-bold text-center">
                 <span class="text-base">Rang</span>
-                {{ bestHeroes[1].rank }}
+                {{ bestHeroes[0].rank }}
               </div>
             </div>
           </div>
@@ -398,7 +398,7 @@
               <div class="h-1 w-full gradient my-0 py-0 rounded-t"></div>
               <div class="flex avatar justify-center my-2">
                 <div class="w-48 rounded-full ring ring-gradient ring-offset-base-100 ring-offset-2">
-                  <img src="{{ bestHeroes[1].avatar }}" />
+                  <img class="rounded-full" src="{{ bestHeroes[1].avatar }}" />
                 </div>
               </div>
             </div>
@@ -416,7 +416,7 @@
               </div>
               <div class="flex avatar justify-center my-2">
                 <div class="w-40 rounded-full ring ring-gradient ring-offset-base-100 ring-offset-2">
-                  <img src="{{ bestHeroes[2].avatar }}" />
+                  <img class="rounded-full" src="{{ bestHeroes[2].avatar }}" />
                 </div>
               </div>
             </div>
