--- a/templates/front/default/heroes.html.twig
+++ b/templates/front/default/heroes.html.twig
@@ -3,6 +3,13 @@
 {% block title %}Héros{% endblock %}
 
 {% block body %}
+{% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+{% endblock %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+{% endblock %}
 
 {% set ranks = ['S', 'A', 'B', 'C'] %}
 <main class="container mx-auto">
