--- a/templates/base_back.html.twig
+++ b/templates/base_back.html.twig
@@ -78,6 +78,10 @@
 				<i class="fas fa-list mr-3"></i>
 				Les missions
 			</a>
+			<a href="{{ path('back_event_payment_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
+				<i class="fas fa-credit-card mr-3"></i>
+				Les paiements
+			</a>
 			<a href="{{ path('front_default_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-4 pl-6 nav-item">
 				<i class="fas fa-home mr-3"></i>
 				Page accueil
@@ -145,6 +149,10 @@
 				<a href="{{ path('back_mission_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-list mr-3"></i>
                     Les missions
+                </a>
+				<a href="{{ path('back_event_payment_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
+                    <i class="fas fa-credit-card mr-3"></i>
+                    Les paiements
                 </a>
 				<a href="{{ path('front_default_index') }}" class="flex items-center text-white opacity-75 hover:opacity-100 py-2 pl-4 nav-item">
                     <i class="fas fa-home mr-3"></i>
