--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -429,7 +429,7 @@
           </div>
         </div>
         <div class="flex flex-wrap justify-center">
-          <a href="/heroes" class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+          <a href="/list-heroes" class="mx-auto lg:mx-0 hover:underline gradient text-white font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             Voir tous les héros
           </a>
         </div>
